Fixed spacing of list items on uses page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -138,7 +138,7 @@ h1 a:hover {
 	text-transform: uppercase;
 }
 
-.type-page h1:before {
+.type-page h1:before, .type-uses h1:before {
 	content: "";
 	width: 52px;
 	height: 10px;
@@ -154,7 +154,6 @@ h1 a:hover {
 h2 {
 	font-size: 24px;
 	line-height: 1.6;
-	font-weight: bold;
 	border-bottom: 4px solid var(--secondary-bg);
 	padding-bottom: 4px;
 	margin-top: 42px;
@@ -166,7 +165,6 @@ h2 {
 h3 {
 	font-size: 14px;
 	line-height: 1.4;
-	font-weight: normal;
 	margin: 0 0 16px 0;
 	font-family: 'Decimal', monospace;
 	text-transform: uppercase;
